# algo-1

./: .gitignore
Laboratorio/00/: tallerLatex.tex
Laboratorio/01/: main.cpp  main.h
Laboratorio/02/: main.cpp  main.h
Laboratorio/04/template-alumnos/: cases.cpp  ejercicios.cpp  ejercicios.h  main.cpp
Laboratorio/05/template-alumnos/: ejercicios.cpp
Laboratorio/06/template-alumnos/: CMakeLists.txt
Laboratorio/06/template-alumnos/ej1/Test/: puntajeTEST.cpp
Laboratorio/06/template-alumnos/ej2/Test/: llenarTaxisTEST.cpp
Laboratorio/06/template-alumnos/ej3/: baldosasDelPiso.cpp  electores.cpp
Laboratorio/06/template-alumnos/ej3/Test/: baldosasDelPisoTEST.cpp  electoresTEST.cpp
Laboratorio/07/template_alumnos/: CMakeLists.txt  ejercicios.cpp
Laboratorio/09/Ejercicios/: ej1.csv  ej1.md  ej3.md  ej4.md  ejercicios.cpp  ejercicios.h  main.cpp
Laboratorio/10/Ejercicios/: ej2.md  ejercicios.cpp  ejercicios.h  main.cpp
Laboratorio/Entregables/: Existe_pico.cpp  bug_mcd.cpp  division.cpp  esTriangular.cpp  estaOrdenado.cpp  fibonacci.cpp  min_subsecuencia.cpp  ordenar.cpp  rotar (copy 1).cpp  rotar.cpp  subsecuencia.cpp  swap.cpp  trasponer.cpp
TPE/: TPE.tex
TPI/template-alumnos/: Funciones_TPI.cpp  Funciones_TPI.h  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  ejercicios.h  main.cpp
TPI/template-alumnos/test/: corregirRegionTEST.cpp  costoSubsidioMejoraTEST.cpp  creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  generarJoinTEST.cpp  histHabitacionalTEST.cpp  histogramaDeAnillosConcentricosTEST.cpp  (+4 more)
(+12 files in other folders)
